Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -540,7 +540,9 @@
       "\tEpoch: 32\tTrain loss: 0.057\tTrain Acc: 98.11255\n",
       "\tEpoch: 32\tTest loss: 1.533\tTest Acc: 76.968125\n",
       "==========================\n",
-      "Epoch: 33 i : 371 and loss: 0.043 acc: 0.9765625\r"
+      "\tEpoch: 33\tTrain loss: 0.053\tTrain Acc: 98.18875\n",
+      "\tEpoch: 33\tTest loss: 1.404\tTest Acc: 78.035125\n",
+      "==========================\n"
      ]
     }
    ],
