Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -722,7 +722,10 @@
       "\tEpoch: 85\tTrain loss: 0.02\tTrain Acc: 99.302875\n",
       "\tEpoch: 85\tTest loss: 1.352\tTest Acc: 81.058755\n",
       "==========================\n",
-      "Epoch: 86 i : 362 and loss: 0.009 acc: 0.9921875\r"
+      "\tEpoch: 86\tTrain loss: 0.018\tTrain Acc: 99.42875\n",
+      "\tEpoch: 86\tTest loss: 1.413\tTest Acc: 81.342555\n",
+      "==========================\n",
+      "Epoch: 87 i : 23 and loss: 0.004 acc: 1.0218755\r"
      ]
     }
    ],
