Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -542,7 +542,8 @@
       "==========================\n",
       "\tEpoch: 33\tTrain loss: 0.053\tTrain Acc: 98.18875\n",
       "\tEpoch: 33\tTest loss: 1.404\tTest Acc: 78.035125\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 34 i : 62 and loss: 0.069 acc: 0.9843755\r"
      ]
     }
    ],
