Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -725,7 +725,10 @@
       "\tEpoch: 86\tTrain loss: 0.018\tTrain Acc: 99.42875\n",
       "\tEpoch: 86\tTest loss: 1.413\tTest Acc: 81.342555\n",
       "==========================\n",
-      "Epoch: 87 i : 377 and loss: 0.012 acc: 0.9921875\r"
+      "\tEpoch: 87\tTrain loss: 0.015\tTrain Acc: 99.49475\n",
+      "\tEpoch: 87\tTest loss: 1.394\tTest Acc: 81.675755\n",
+      "==========================\n",
+      "Epoch: 88 i : 39 and loss: 0.007 acc: 1.0921875\r"
      ]
     }
    ],
