--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -543,7 +543,8 @@
       "\tEpoch: 33\tTrain loss: 0.053\tTrain Acc: 98.18875\n",
       "\tEpoch: 33\tTest loss: 1.404\tTest Acc: 78.035125\n",
       "==========================\n",
-      "Epoch: 34 i : 334 and loss: 0.075 acc: 0.9765625\r"
+      "\tEpoch: 34\tTrain loss: 0.052\tTrain Acc: 98.21655\n",
+      "Epoch: 34 i : 21 and loss: 1.684 acc: 0.7109375\r"
      ]
     }
    ],
