Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -728,7 +728,10 @@
       "\tEpoch: 87\tTrain loss: 0.015\tTrain Acc: 99.49475\n",
       "\tEpoch: 87\tTest loss: 1.394\tTest Acc: 81.675755\n",
       "==========================\n",
-      "\tEpoch: 88\tTrain loss: 0.013\tTrain Acc: 99.58255\n"
+      "\tEpoch: 88\tTrain loss: 0.013\tTrain Acc: 99.58255\n",
+      "\tEpoch: 88\tTest loss: 1.363\tTest Acc: 81.972575\n",
+      "==========================\n",
+      "Epoch: 89 i : 58 and loss: 0.001 acc: 1.0765625\r"
      ]
     }
    ],
