Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -544,7 +544,9 @@
       "\tEpoch: 33\tTest loss: 1.404\tTest Acc: 78.035125\n",
       "==========================\n",
       "\tEpoch: 34\tTrain loss: 0.052\tTrain Acc: 98.21655\n",
-      "Epoch: 34 i : 21 and loss: 1.684 acc: 0.7109375\r"
+      "\tEpoch: 34\tTest loss: 1.55\tTest Acc: 77.4775255\n",
+      "==========================\n",
+      "Epoch: 35 i : 27 and loss: 0.049 acc: 0.9765625\r"
      ]
     }
    ],
