--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -731,7 +731,10 @@
       "\tEpoch: 88\tTrain loss: 0.013\tTrain Acc: 99.58255\n",
       "\tEpoch: 88\tTest loss: 1.363\tTest Acc: 81.972575\n",
       "==========================\n",
-      "Epoch: 89 i : 372 and loss: 0.031 acc: 0.9921875\r"
+      "\tEpoch: 89\tTrain loss: 0.021\tTrain Acc: 99.37875\n",
+      "\tEpoch: 89\tTest loss: 1.313\tTest Acc: 81.561875\n",
+      "==========================\n",
+      "Epoch: 90 i : 31 and loss: 0.016 acc: 0.9921875\r"
      ]
     }
    ],
