--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -734,7 +734,10 @@
       "\tEpoch: 89\tTrain loss: 0.021\tTrain Acc: 99.37875\n",
       "\tEpoch: 89\tTest loss: 1.313\tTest Acc: 81.561875\n",
       "==========================\n",
-      "Epoch: 90 i : 384 and loss: 0.087 acc: 0.9921875\r"
+      "\tEpoch: 90\tTrain loss: 0.018\tTrain Acc: 99.39875\n",
+      "\tEpoch: 90\tTest loss: 1.487\tTest Acc: 81.175555\n",
+      "==========================\n",
+      "Epoch: 91 i : 53 and loss: 0.014 acc: 0.9921875\r"
      ]
     }
    ],
