--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -546,7 +546,9 @@
       "\tEpoch: 34\tTrain loss: 0.052\tTrain Acc: 98.21655\n",
       "\tEpoch: 34\tTest loss: 1.55\tTest Acc: 77.4775255\n",
       "==========================\n",
-      "Epoch: 35 i : 370 and loss: 0.116 acc: 0.9609375\r"
+      "\tEpoch: 35\tTrain loss: 0.047\tTrain Acc: 98.46255\n",
+      "\tEpoch: 35\tTest loss: 1.615\tTest Acc: 76.725625\n",
+      "==========================\n"
      ]
     }
    ],
