Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -737,7 +737,10 @@
       "\tEpoch: 90\tTrain loss: 0.018\tTrain Acc: 99.39875\n",
       "\tEpoch: 90\tTest loss: 1.487\tTest Acc: 81.175555\n",
       "==========================\n",
-      "Epoch: 91 i : 316 and loss: 0.022 acc: 0.9921875\r"
+      "\tEpoch: 91\tTrain loss: 0.015\tTrain Acc: 99.53755\n",
+      "\tEpoch: 91\tTest loss: 1.483\tTest Acc: 81.149375\n",
+      "==========================\n",
+      "Epoch: 92 i : 33 and loss: 0.056 acc: 0.9843755\r"
      ]
     }
    ],
