Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -548,7 +548,8 @@
       "==========================\n",
       "\tEpoch: 35\tTrain loss: 0.047\tTrain Acc: 98.46255\n",
       "\tEpoch: 35\tTest loss: 1.615\tTest Acc: 76.725625\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 36 i : 60 and loss: 0.077 acc: 0.9765625\r"
      ]
     }
    ],
