Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -740,7 +740,10 @@
       "\tEpoch: 91\tTrain loss: 0.015\tTrain Acc: 99.53755\n",
       "\tEpoch: 91\tTest loss: 1.483\tTest Acc: 81.149375\n",
       "==========================\n",
-      "Epoch: 92 i : 375 and loss: 0.014 acc: 0.9843755\r"
+      "\tEpoch: 92\tTrain loss: 0.016\tTrain Acc: 99.49655\n",
+      "\tEpoch: 92\tTest loss: 1.386\tTest Acc: 82.498125\n",
+      "==========================\n",
+      "Epoch: 93 i : 36 and loss: 0.02 acc: 0.99218755\r"
      ]
     }
    ],
