Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -743,7 +743,10 @@
       "\tEpoch: 92\tTrain loss: 0.016\tTrain Acc: 99.49655\n",
       "\tEpoch: 92\tTest loss: 1.386\tTest Acc: 82.498125\n",
       "==========================\n",
-      "Epoch: 93 i : 371 and loss: 0.022 acc: 0.9921875\r"
+      "\tEpoch: 93\tTrain loss: 0.018\tTrain Acc: 99.39225\n",
+      "\tEpoch: 93\tTest loss: 1.354\tTest Acc: 80.585375\n",
+      "==========================\n",
+      "Epoch: 94 i : 116 and loss: 0.003 acc: 1.0921875\r"
      ]
     }
    ],
