Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -549,7 +549,10 @@
       "\tEpoch: 35\tTrain loss: 0.047\tTrain Acc: 98.46255\n",
       "\tEpoch: 35\tTest loss: 1.615\tTest Acc: 76.725625\n",
       "==========================\n",
-      "\tEpoch: 36\tTrain loss: 0.045\tTrain Acc: 98.54275\n"
+      "\tEpoch: 36\tTrain loss: 0.045\tTrain Acc: 98.54275\n",
+      "\tEpoch: 36\tTest loss: 1.745\tTest Acc: 77.195575\n",
+      "==========================\n",
+      "Epoch: 37 i : 15 and loss: 0.042 acc: 0.9843755\r"
      ]
     }
    ],
