Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -749,7 +749,10 @@
       "\tEpoch: 94\tTrain loss: 0.015\tTrain Acc: 99.49755\n",
       "\tEpoch: 94\tTest loss: 1.416\tTest Acc: 81.791875\n",
       "==========================\n",
-      "Epoch: 95 i : 373 and loss: 0.035 acc: 0.9921875\r"
+      "\tEpoch: 95\tTrain loss: 0.012\tTrain Acc: 99.60855\n",
+      "\tEpoch: 95\tTest loss: 1.418\tTest Acc: 80.975555\n",
+      "==========================\n",
+      "Epoch: 96 i : 39 and loss: 0.04 acc: 0.99218755\r"
      ]
     }
    ],
