Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -552,7 +552,8 @@
       "\tEpoch: 36\tTrain loss: 0.045\tTrain Acc: 98.54275\n",
       "\tEpoch: 36\tTest loss: 1.745\tTest Acc: 77.195575\n",
       "==========================\n",
-      "Epoch: 37 i : 355 and loss: 0.007 acc: 1.0843755\r"
+      "\tEpoch: 37\tTrain loss: 0.054\tTrain Acc: 98.21675\n",
+      "Epoch: 37 i : 52 and loss: 1.471 acc: 0.7343755\r"
      ]
     }
    ],
