--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -553,7 +553,9 @@
       "\tEpoch: 36\tTest loss: 1.745\tTest Acc: 77.195575\n",
       "==========================\n",
       "\tEpoch: 37\tTrain loss: 0.054\tTrain Acc: 98.21675\n",
-      "Epoch: 37 i : 52 and loss: 1.471 acc: 0.7343755\r"
+      "\tEpoch: 37\tTest loss: 1.546\tTest Acc: 77.615875\n",
+      "==========================\n",
+      "Epoch: 38 i : 15 and loss: 0.019 acc: 0.9921875\r"
      ]
     }
    ],
