Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -755,7 +755,10 @@
       "\tEpoch: 96\tTrain loss: 0.022\tTrain Acc: 99.28275\n",
       "\tEpoch: 96\tTest loss: 1.323\tTest Acc: 80.985255\n",
       "==========================\n",
-      "\tEpoch: 97\tTrain loss: 0.01\tTrain Acc: 99.634875\n"
+      "\tEpoch: 97\tTrain loss: 0.01\tTrain Acc: 99.634875\n",
+      "\tEpoch: 97\tTest loss: 1.411\tTest Acc: 81.886255\n",
+      "==========================\n",
+      "Epoch: 98 i : 56 and loss: 0.035 acc: 0.9921875\r"
      ]
     }
    ],
