Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -758,7 +758,9 @@
       "\tEpoch: 97\tTrain loss: 0.01\tTrain Acc: 99.634875\n",
       "\tEpoch: 97\tTest loss: 1.411\tTest Acc: 81.886255\n",
       "==========================\n",
-      "Epoch: 98 i : 287 and loss: 0.0 acc: 1.0.9921875\r"
+      "\tEpoch: 98\tTrain loss: 0.01\tTrain Acc: 99.641875\n",
+      "\tEpoch: 98\tTest loss: 1.436\tTest Acc: 81.248755\n",
+      "==========================\n"
      ]
     }
    ],
