--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -555,7 +555,10 @@
       "\tEpoch: 37\tTrain loss: 0.054\tTrain Acc: 98.21675\n",
       "\tEpoch: 37\tTest loss: 1.546\tTest Acc: 77.615875\n",
       "==========================\n",
-      "Epoch: 38 i : 385 and loss: 0.032 acc: 0.9921875\r"
+      "\tEpoch: 38\tTrain loss: 0.044\tTrain Acc: 98.55275\n",
+      "\tEpoch: 38\tTest loss: 1.625\tTest Acc: 78.021255\n",
+      "==========================\n",
+      "Epoch: 39 i : 13 and loss: 0.071 acc: 0.9765625\r"
      ]
     }
    ],
