Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -760,7 +760,8 @@
       "==========================\n",
       "\tEpoch: 98\tTrain loss: 0.01\tTrain Acc: 99.641875\n",
       "\tEpoch: 98\tTest loss: 1.436\tTest Acc: 81.248755\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 99 i : 186 and loss: 0.049 acc: 0.9843755\r"
      ]
     }
    ],
