Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -761,7 +761,8 @@
       "\tEpoch: 98\tTrain loss: 0.01\tTrain Acc: 99.641875\n",
       "\tEpoch: 98\tTest loss: 1.436\tTest Acc: 81.248755\n",
       "==========================\n",
-      "Epoch: 99 i : 305 and loss: 0.043 acc: 0.9843755\r"
+      "\tEpoch: 99\tTrain loss: 0.019\tTrain Acc: 99.39855\n",
+      "Epoch: 99 i : 68 and loss: 0.927 acc: 0.8437575\r"
      ]
     }
    ],
