Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -558,7 +558,8 @@
       "\tEpoch: 38\tTrain loss: 0.044\tTrain Acc: 98.55275\n",
       "\tEpoch: 38\tTest loss: 1.625\tTest Acc: 78.021255\n",
       "==========================\n",
-      "Epoch: 39 i : 333 and loss: 0.041 acc: 0.9843755\r"
+      "\tEpoch: 39\tTrain loss: 0.045\tTrain Acc: 98.55255\n",
+      "Epoch: 39 i : 55 and loss: 2.061 acc: 0.7578125\r"
      ]
     }
    ],
