Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -559,7 +559,9 @@
       "\tEpoch: 38\tTest loss: 1.625\tTest Acc: 78.021255\n",
       "==========================\n",
       "\tEpoch: 39\tTrain loss: 0.045\tTrain Acc: 98.55255\n",
-      "Epoch: 39 i : 55 and loss: 2.061 acc: 0.7578125\r"
+      "\tEpoch: 39\tTest loss: 1.508\tTest Acc: 78.717525\n",
+      "==========================\n",
+      "Epoch: 40 i : 66 and loss: 0.017 acc: 0.9921875\r"
      ]
     }
    ],
