Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -561,7 +561,8 @@
       "\tEpoch: 39\tTrain loss: 0.045\tTrain Acc: 98.55255\n",
       "\tEpoch: 39\tTest loss: 1.508\tTest Acc: 78.717525\n",
       "==========================\n",
-      "Epoch: 40 i : 335 and loss: 0.011 acc: 1.0843755\r"
+      "\tEpoch: 40\tTrain loss: 0.04\tTrain Acc: 98.698875\n",
+      "Epoch: 40 i : 55 and loss: 2.033 acc: 0.7503125\r"
      ]
     }
    ],
