Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -562,7 +562,9 @@
       "\tEpoch: 39\tTest loss: 1.508\tTest Acc: 78.717525\n",
       "==========================\n",
       "\tEpoch: 40\tTrain loss: 0.04\tTrain Acc: 98.698875\n",
-      "Epoch: 40 i : 55 and loss: 2.033 acc: 0.7503125\r"
+      "\tEpoch: 40\tTest loss: 1.545\tTest Acc: 78.725375\n",
+      "==========================\n",
+      "Epoch: 41 i : 65 and loss: 0.028 acc: 0.9843755\r"
      ]
     }
    ],
