Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -963,11 +963,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-03T22:30:47.434048Z",
+     "start_time": "2019-05-03T22:30:47.316814Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "net.s"
+    "torch.save(net, 'relu')\n",
+    "! start ."
    ]
   },
   {
