Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -564,7 +564,8 @@
       "\tEpoch: 40\tTrain loss: 0.04\tTrain Acc: 98.698875\n",
       "\tEpoch: 40\tTest loss: 1.545\tTest Acc: 78.725375\n",
       "==========================\n",
-      "Epoch: 41 i : 327 and loss: 0.073 acc: 0.9765625\r"
+      "\tEpoch: 41\tTrain loss: 0.044\tTrain Acc: 98.57875\n",
+      "Epoch: 41 i : 35 and loss: 1.579 acc: 0.7890625\r"
      ]
     }
    ],
