Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -565,7 +565,9 @@
       "\tEpoch: 40\tTest loss: 1.545\tTest Acc: 78.725375\n",
       "==========================\n",
       "\tEpoch: 41\tTrain loss: 0.044\tTrain Acc: 98.57875\n",
-      "Epoch: 41 i : 35 and loss: 1.579 acc: 0.7890625\r"
+      "\tEpoch: 41\tTest loss: 1.723\tTest Acc: 77.015625\n",
+      "==========================\n",
+      "Epoch: 42 i : 53 and loss: 0.07 acc: 0.97656255\r"
      ]
     }
    ],
