--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -985,10 +985,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-03T22:31:44.344198Z",
+     "start_time": "2019-05-03T22:31:44.295304Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\torch\\serialization.py:250: UserWarning:\n",
+      "\n",
+      "Couldn't retrieve source code for container of type AllConvNet_BN. It won't be checked for correctness upon loading.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.save(net, 'relu_bn.npy')"
+   ]
   },
   {
    "cell_type": "markdown",
