Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -963,17 +963,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T22:30:47.434048Z",
-     "start_time": "2019-05-03T22:30:47.316814Z"
+     "end_time": "2019-05-03T22:31:21.382194Z",
+     "start_time": "2019-05-03T22:31:21.361237Z"
     }
    },
    "outputs": [],
    "source": [
-    "torch.save(net, 'relu')\n",
-    "! start ."
+    "torch.save(net, 'relu.pth.ta')"
    ]
   },
   {
