Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -1005,7 +1005,8 @@
     }
    ],
    "source": [
-    "torch.save(net, 'relu_bn.npy')"
+    "torch.save(net, 'relu_bn.npy')\n",
+    "torch.save(net, 'relu.pth.tar')"
    ]
   },
   {
