Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -985,28 +985,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T22:31:44.344198Z",
-     "start_time": "2019-05-03T22:31:44.295304Z"
+     "end_time": "2019-05-03T22:33:55.725296Z",
+     "start_time": "2019-05-03T22:33:55.698070Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\torch\\serialization.py:250: UserWarning:\n",
-      "\n",
-      "Couldn't retrieve source code for container of type AllConvNet_BN. It won't be checked for correctness upon loading.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "torch.save(net, 'relu_bn.npy')\n",
-    "torch.save(net, 'relu.pth.tar')"
+    "torch.save(net, 'relu_bn.pth.tar')"
    ]
   },
   {
