--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -567,7 +567,7 @@
       "\tEpoch: 41\tTrain loss: 0.044\tTrain Acc: 98.57875\n",
       "\tEpoch: 41\tTest loss: 1.723\tTest Acc: 77.015625\n",
       "==========================\n",
-      "Epoch: 42 i : 315 and loss: 0.038 acc: 0.9921875\r"
+      "Epoch: 42 i : 370 and loss: 0.031 acc: 0.9921875\r"
      ]
     }
    ],
@@ -760,6 +760,19 @@
     "s2   = ycoord_mesh.ravel()[inds]\n",
     "coordinate = np.c_[s1,s2]\n",
     "print('From ',small_range,' to ',large_range,' with ',numebr_of_points,' total number of coordinate: ', numebr_of_points**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-05-03T22:34:14.794Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "torch.save(net, 'relu_LocalRN.pth.tar')"
    ]
   },
   {
