Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -567,7 +567,8 @@
       "\tEpoch: 41\tTrain loss: 0.044\tTrain Acc: 98.57875\n",
       "\tEpoch: 41\tTest loss: 1.723\tTest Acc: 77.015625\n",
       "==========================\n",
-      "Epoch: 42 i : 370 and loss: 0.031 acc: 0.9921875\r"
+      "\tEpoch: 42\tTrain loss: 0.045\tTrain Acc: 98.50855\n",
+      "Epoch: 42 i : 9 and loss: 1.455 acc: 0.7890625\r"
      ]
     }
    ],
