--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -963,16 +963,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T22:31:21.382194Z",
-     "start_time": "2019-05-03T22:31:21.361237Z"
+     "end_time": "2019-05-03T22:33:29.633829Z",
+     "start_time": "2019-05-03T22:33:29.603633Z"
     }
    },
    "outputs": [],
    "source": [
-    "torch.save(net, 'relu.pth.ta')"
+    "torch.save(net, 'relu.pth.tar')"
    ]
   },
   {
