Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -568,7 +568,9 @@
       "\tEpoch: 41\tTest loss: 1.723\tTest Acc: 77.015625\n",
       "==========================\n",
       "\tEpoch: 42\tTrain loss: 0.045\tTrain Acc: 98.50855\n",
-      "Epoch: 42 i : 9 and loss: 1.455 acc: 0.7890625\r"
+      "\tEpoch: 42\tTest loss: 1.56\tTest Acc: 78.6162575\n",
+      "==========================\n",
+      "Epoch: 43 i : 38 and loss: 0.074 acc: 0.9765625\r"
      ]
     }
    ],
