Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -16668,10 +16668,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-05-03T22:36:28.220369Z",
+     "start_time": "2019-05-03T22:36:28.136037Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "! mkdir a\n",
+    "! mkdir b\n",
+    "! mkdir c"
+   ]
   },
   {
    "cell_type": "code",
