Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -570,7 +570,10 @@
       "\tEpoch: 42\tTrain loss: 0.045\tTrain Acc: 98.50855\n",
       "\tEpoch: 42\tTest loss: 1.56\tTest Acc: 78.6162575\n",
       "==========================\n",
-      "Epoch: 43 i : 389 and loss: 0.045 acc: 0.9843755\r"
+      "\tEpoch: 43\tTrain loss: 0.042\tTrain Acc: 98.67255\n",
+      "\tEpoch: 43\tTest loss: 1.563\tTest Acc: 78.568755\n",
+      "==========================\n",
+      "Epoch: 44 i : 30 and loss: 0.041 acc: 0.9921875\r"
      ]
     }
    ],
