Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -573,7 +573,10 @@
       "\tEpoch: 43\tTrain loss: 0.042\tTrain Acc: 98.67255\n",
       "\tEpoch: 43\tTest loss: 1.563\tTest Acc: 78.568755\n",
       "==========================\n",
-      "Epoch: 44 i : 384 and loss: 0.043 acc: 0.9843755\r"
+      "\tEpoch: 44\tTrain loss: 0.039\tTrain Acc: 98.69675\n",
+      "\tEpoch: 44\tTest loss: 1.511\tTest Acc: 79.275755\n",
+      "==========================\n",
+      "Epoch: 45 i : 23 and loss: 0.049 acc: 0.9921875\r"
      ]
     }
    ],
