--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -576,7 +576,10 @@
       "\tEpoch: 44\tTrain loss: 0.039\tTrain Acc: 98.69675\n",
       "\tEpoch: 44\tTest loss: 1.511\tTest Acc: 79.275755\n",
       "==========================\n",
-      "Epoch: 45 i : 382 and loss: 0.052 acc: 0.9843755\r"
+      "\tEpoch: 45\tTrain loss: 0.044\tTrain Acc: 98.55255\n",
+      "\tEpoch: 45\tTest loss: 1.72\tTest Acc: 77.1225375\n",
+      "==========================\n",
+      "Epoch: 46 i : 21 and loss: 0.032 acc: 0.9921875\r"
      ]
     }
    ],
