Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -579,7 +579,10 @@
       "\tEpoch: 45\tTrain loss: 0.044\tTrain Acc: 98.55255\n",
       "\tEpoch: 45\tTest loss: 1.72\tTest Acc: 77.1225375\n",
       "==========================\n",
-      "Epoch: 46 i : 374 and loss: 0.02 acc: 0.98437575\r"
+      "\tEpoch: 46\tTrain loss: 0.036\tTrain Acc: 98.86275\n",
+      "\tEpoch: 46\tTest loss: 1.659\tTest Acc: 78.528125\n",
+      "==========================\n",
+      "Epoch: 47 i : 14 and loss: 0.066 acc: 0.9843755\r"
      ]
     }
    ],
