--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1054,44 +1054,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T22:48:52.279099Z",
-     "start_time": "2019-05-03T22:48:52.253689Z"
+     "end_time": "2019-05-03T22:50:33.516884Z",
+     "start_time": "2019-05-03T22:50:33.489766Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([96, 3, 3, 3])\n",
-      "torch.Size([96, 3, 3, 3])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([96, 96, 3, 3])\n",
-      "torch.Size([192, 96, 3, 3])\n",
-      "torch.Size([192, 96, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 3, 3])\n",
-      "torch.Size([192, 192, 1, 1])\n",
-      "torch.Size([192, 192, 1, 1])\n",
-      "torch.Size([10, 192, 1, 1])\n",
-      "torch.Size([10, 192, 1, 1])\n"
+     "ename": "RuntimeError",
+     "evalue": "expected type torch.FloatTensor but got torch.cuda.FloatTensor",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-a0a74e8390ef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mw\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrandom_direction2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcopy_of_the_weights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mkeepdim\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mkeepdim\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1e-10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m: expected type torch.FloatTensor but got torch.cuda.FloatTensor"
      ]
     }
    ],
    "source": [
     "for d,w in zip(random_direction2,copy_of_the_weights):\n",
-    "    d.m\n",
-    "    print(d.shape)    \n",
-    "    print(w.shape)    "
+    "    temp = w.norm(dim=0,keepdim=True)/(d.norm(dim=0,keepdim=True).cuda()+1e-10)\n",
+    "    d    = d.cuda() * temp\n"
    ]
   },
   {
