Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -582,7 +582,10 @@
       "\tEpoch: 46\tTrain loss: 0.036\tTrain Acc: 98.86275\n",
       "\tEpoch: 46\tTest loss: 1.659\tTest Acc: 78.528125\n",
       "==========================\n",
-      "Epoch: 47 i : 365 and loss: 0.072 acc: 0.9765625\r"
+      "\tEpoch: 47\tTrain loss: 0.047\tTrain Acc: 98.48275\n",
+      "\tEpoch: 47\tTest loss: 1.53\tTest Acc: 78.5756255\n",
+      "==========================\n",
+      "Epoch: 48 i : 4 and loss: 0.012 acc: 1.0765625\r"
      ]
     }
    ],
