--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -585,7 +585,9 @@
       "\tEpoch: 47\tTrain loss: 0.047\tTrain Acc: 98.48275\n",
       "\tEpoch: 47\tTest loss: 1.53\tTest Acc: 78.5756255\n",
       "==========================\n",
-      "Epoch: 48 i : 354 and loss: 0.036 acc: 0.9843755\r"
+      "\tEpoch: 48\tTrain loss: 0.036\tTrain Acc: 98.77255\n",
+      "\tEpoch: 48\tTest loss: 1.493\tTest Acc: 78.829375\n",
+      "==========================\n"
      ]
     }
    ],
