Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -587,7 +587,8 @@
       "==========================\n",
       "\tEpoch: 48\tTrain loss: 0.036\tTrain Acc: 98.77255\n",
       "\tEpoch: 48\tTest loss: 1.493\tTest Acc: 78.829375\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 49 i : 80 and loss: 0.056 acc: 0.9765625\r"
      ]
     }
    ],
