Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -588,7 +588,8 @@
       "\tEpoch: 48\tTrain loss: 0.036\tTrain Acc: 98.77255\n",
       "\tEpoch: 48\tTest loss: 1.493\tTest Acc: 78.829375\n",
       "==========================\n",
-      "Epoch: 49 i : 342 and loss: 0.004 acc: 1.0843755\r"
+      "\tEpoch: 49\tTrain loss: 0.034\tTrain Acc: 98.88255\n",
+      "Epoch: 49 i : 68 and loss: 1.705 acc: 0.7890625\r"
      ]
     }
    ],
