Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -589,7 +589,9 @@
       "\tEpoch: 48\tTest loss: 1.493\tTest Acc: 78.829375\n",
       "==========================\n",
       "\tEpoch: 49\tTrain loss: 0.034\tTrain Acc: 98.88255\n",
-      "Epoch: 49 i : 68 and loss: 1.705 acc: 0.7890625\r"
+      "\tEpoch: 49\tTest loss: 1.787\tTest Acc: 77.892555\n",
+      "==========================\n",
+      "Epoch: 50 i : 68 and loss: 0.051 acc: 0.9843755\r"
      ]
     }
    ],
