--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1054,11 +1054,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:00:14.735455Z",
-     "start_time": "2019-05-03T23:00:14.703525Z"
+     "start_time": "2019-05-03T23:01:43.839Z"
     }
    },
    "outputs": [
@@ -1066,7 +1065,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"norm/Sqrt:0\", shape=(96, 1, 1, 3), dtype=float32)\n",
+      "Tensor(\"norm_6/Sqrt:0\", shape=(96, 3, 1, 3), dtype=float32)\n",
       "(96, 3, 3, 3)\n"
      ]
     }
@@ -1074,9 +1073,8 @@
    "source": [
     "for d,w in zip(random_direction2,copy_of_the_weights):\n",
     "    d_np   = d.numpy()\n",
-    "    d_norm = tf.norm(d_np,axis=(1,2),keepdims=True) \n",
+    "    d_norm = tf.norm(d_np,axis=(-2,2),keepdims=True) \n",
     "    print(d_norm)\n",
-    "    print(d_np.shape)\n",
     "    break"
    ]
   },
