--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -591,7 +591,8 @@
       "\tEpoch: 49\tTrain loss: 0.034\tTrain Acc: 98.88255\n",
       "\tEpoch: 49\tTest loss: 1.787\tTest Acc: 77.892555\n",
       "==========================\n",
-      "Epoch: 50 i : 331 and loss: 0.02 acc: 0.99218755\r"
+      "\tEpoch: 50\tTrain loss: 0.04\tTrain Acc: 98.756755\n",
+      "Epoch: 50 i : 44 and loss: 2.112 acc: 0.7421875\r"
      ]
     }
    ],
