Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -592,7 +592,9 @@
       "\tEpoch: 49\tTest loss: 1.787\tTest Acc: 77.892555\n",
       "==========================\n",
       "\tEpoch: 50\tTrain loss: 0.04\tTrain Acc: 98.756755\n",
-      "Epoch: 50 i : 44 and loss: 2.112 acc: 0.7421875\r"
+      "\tEpoch: 50\tTest loss: 1.598\tTest Acc: 77.725755\n",
+      "==========================\n",
+      "Epoch: 51 i : 57 and loss: 0.002 acc: 1.0765625\r"
      ]
     }
    ],
