--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1054,11 +1054,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:02:09.109613Z",
-     "start_time": "2019-05-03T23:02:09.097105Z"
+     "end_time": "2019-05-03T23:04:13.860359Z",
+     "start_time": "2019-05-03T23:03:57.148043Z"
     }
    },
    "outputs": [
@@ -1066,15 +1066,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"norm_8/Sqrt:0\", shape=(1, 1, 3, 3), dtype=float32)\n"
+      "(96, 1, 1, 3)\n"
      ]
     }
    ],
    "source": [
     "for d,w in zip(random_direction2,copy_of_the_weights):\n",
     "    d_np   = d.numpy()\n",
-    "    d_norm = tf.norm(d_np,axis=(0,-3),keepdims=True) \n",
-    "    print(d_norm)\n",
+    "    d_norm = tf.norm(d_np,axis=(1,2),ord=2,keepdims=True) \n",
+    "    print(d_norm.eval().shape)\n",
     "    break"
    ]
   },
