Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -594,7 +594,8 @@
       "\tEpoch: 50\tTrain loss: 0.04\tTrain Acc: 98.756755\n",
       "\tEpoch: 50\tTest loss: 1.598\tTest Acc: 77.725755\n",
       "==========================\n",
-      "Epoch: 51 i : 319 and loss: 0.004 acc: 1.0765625\r"
+      "\tEpoch: 51\tTrain loss: 0.033\tTrain Acc: 98.94455\n",
+      "Epoch: 51 i : 20 and loss: 1.619 acc: 0.7734375\r"
      ]
     }
    ],
