--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -595,7 +595,9 @@
       "\tEpoch: 50\tTest loss: 1.598\tTest Acc: 77.725755\n",
       "==========================\n",
       "\tEpoch: 51\tTrain loss: 0.033\tTrain Acc: 98.94455\n",
-      "Epoch: 51 i : 20 and loss: 1.619 acc: 0.7734375\r"
+      "\tEpoch: 51\tTest loss: 1.604\tTest Acc: 77.695255\n",
+      "==========================\n",
+      "Epoch: 52 i : 46 and loss: 0.105 acc: 0.9765625\r"
      ]
     }
    ],
