--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1054,11 +1054,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:04:13.860359Z",
-     "start_time": "2019-05-03T23:03:57.148043Z"
+     "end_time": "2019-05-03T23:06:35.144619Z",
+     "start_time": "2019-05-03T23:06:35.136446Z"
     }
    },
    "outputs": [
@@ -1066,15 +1066,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(96, 1, 1, 3)\n"
+      "torch.Size([96, 1, 1, 1])\n",
+      "torch.Size([96, 27])\n"
      ]
     }
    ],
    "source": [
     "for d,w in zip(random_direction2,copy_of_the_weights):\n",
-    "    d_np   = d.numpy()\n",
-    "    d_norm = tf.norm(d_np,axis=(1,2),ord=2,keepdims=True) \n",
-    "    print(d_norm.eval().shape)\n",
+    "    d_re   = d.view((d.shape[0],-1))\n",
+    "    d_norm = d_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "    \n",
+    "    w_re   = w.view((w.shape[0],-1))\n",
+    "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "    print(d_norm.shape)\n",
+    "    print(d_norm.shape)\n",
+    "\n",
+    "\n",
     "    break"
    ]
   },
