Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1054,23 +1054,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:06:35.144619Z",
-     "start_time": "2019-05-03T23:06:35.136446Z"
+     "start_time": "2019-05-03T23:07:43.637Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([96, 1, 1, 1])\n",
-      "torch.Size([96, 27])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for d,w in zip(random_direction2,copy_of_the_weights):\n",
     "    d_re   = d.view((d.shape[0],-1))\n",
@@ -1078,11 +1068,9 @@
     "    \n",
     "    w_re   = w.view((w.shape[0],-1))\n",
     "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
-    "    print(d_norm.shape)\n",
-    "    print(d_norm.shape)\n",
-    "\n",
-    "\n",
-    "    break"
+    "    \n",
+    "    d = d.cuda() * (w_norm/(d_norm.cuda()+1e-10))\n",
+    "    print(d.shape)"
    ]
   },
   {
