Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1054,13 +1054,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T23:07:43.637Z"
+     "end_time": "2019-05-03T23:07:48.342393Z",
+     "start_time": "2019-05-03T23:07:48.197609Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([96, 3, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([96, 96, 3, 3])\n",
+      "torch.Size([192, 96, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 3, 3])\n",
+      "torch.Size([192, 192, 1, 1])\n",
+      "torch.Size([10, 192, 1, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "for d,w in zip(random_direction2,copy_of_the_weights):\n",
     "    d_re   = d.view((d.shape[0],-1))\n",
@@ -1069,8 +1086,7 @@
     "    w_re   = w.view((w.shape[0],-1))\n",
     "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    \n",
-    "    d = d.cuda() * (w_norm/(d_norm.cuda()+1e-10))\n",
-    "    print(d.shape)"
+    "    d = d.cuda() * (w_norm/(d_norm.cuda()+1e-10))"
    ]
   },
   {
