--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -597,7 +597,7 @@
       "\tEpoch: 51\tTrain loss: 0.033\tTrain Acc: 98.94455\n",
       "\tEpoch: 51\tTest loss: 1.604\tTest Acc: 77.695255\n",
       "==========================\n",
-      "Epoch: 52 i : 309 and loss: 0.023 acc: 0.9921875\r"
+      "\tEpoch: 52\tTrain loss: 0.029\tTrain Acc: 99.07255\n"
      ]
     }
    ],
