Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -597,7 +597,10 @@
       "\tEpoch: 51\tTrain loss: 0.033\tTrain Acc: 98.94455\n",
       "\tEpoch: 51\tTest loss: 1.604\tTest Acc: 77.695255\n",
       "==========================\n",
-      "\tEpoch: 52\tTrain loss: 0.029\tTrain Acc: 99.07255\n"
+      "\tEpoch: 52\tTrain loss: 0.029\tTrain Acc: 99.07255\n",
+      "\tEpoch: 52\tTest loss: 1.924\tTest Acc: 78.095755\n",
+      "==========================\n",
+      "Epoch: 53 i : 34 and loss: 0.014 acc: 0.9921875\r"
      ]
     }
    ],
