Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -600,7 +600,10 @@
       "\tEpoch: 52\tTrain loss: 0.029\tTrain Acc: 99.07255\n",
       "\tEpoch: 52\tTest loss: 1.924\tTest Acc: 78.095755\n",
       "==========================\n",
-      "Epoch: 53 i : 383 and loss: 0.089 acc: 0.9687525\r"
+      "\tEpoch: 53\tTrain loss: 0.041\tTrain Acc: 98.72625\n",
+      "\tEpoch: 53\tTest loss: 1.764\tTest Acc: 77.023755\n",
+      "==========================\n",
+      "Epoch: 54 i : 23 and loss: 0.015 acc: 0.9921875\r"
      ]
     }
    ],
