Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -329,7 +329,7 @@
     "#  Get the weights - after training\n",
     "def get_weights(net):            return [p.data for p in net.parameters()]\n",
     "def get_random_weights(weights): return [torch.randn(w.size()) for w in weights]\n",
-    "def normalize_direction(direction, weights,norm='layer'):\n",
+    "def normalize_direction(direction, weights,norm='filter'):\n",
     "    if norm == 'filter':\n",
     "        # Rescale the filters (weights in group) in 'direction' so that each filter has the same norm as its corresponding filter in 'weights'.\n",
     "        for d, w in zip(direction, weights): \n",
@@ -1039,10 +1039,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T23:16:35.052Z"
+     "end_time": "2019-05-03T23:17:00.498586Z",
+     "start_time": "2019-05-03T23:16:51.052223Z"
     }
    },
    "outputs": [],
