--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -606,7 +606,9 @@
       "\tEpoch: 54\tTrain loss: 0.037\tTrain Acc: 98.79875\n",
       "\tEpoch: 54\tTest loss: 1.741\tTest Acc: 77.385625\n",
       "==========================\n",
-      "Epoch: 55 i : 358 and loss: 0.103 acc: 0.9687555\r"
+      "\tEpoch: 55\tTrain loss: 0.036\tTrain Acc: 98.80655\n",
+      "\tEpoch: 55\tTest loss: 1.682\tTest Acc: 78.075255\n",
+      "==========================\n"
      ]
     }
    ],
