Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -608,7 +608,8 @@
       "==========================\n",
       "\tEpoch: 55\tTrain loss: 0.036\tTrain Acc: 98.80655\n",
       "\tEpoch: 55\tTest loss: 1.682\tTest Acc: 78.075255\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 56 i : 85 and loss: 0.034 acc: 0.9843755\r"
      ]
     }
    ],
