Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -609,7 +609,9 @@
       "\tEpoch: 55\tTrain loss: 0.036\tTrain Acc: 98.80655\n",
       "\tEpoch: 55\tTest loss: 1.682\tTest Acc: 78.075255\n",
       "==========================\n",
-      "Epoch: 56 i : 348 and loss: 0.093 acc: 0.9921875\r"
+      "\tEpoch: 56\tTrain loss: 0.03\tTrain Acc: 99.061875\n",
+      "\tEpoch: 56\tTest loss: 1.734\tTest Acc: 78.485555\n",
+      "==========================\n"
      ]
     }
    ],
