--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1097,11 +1097,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 141,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:22:20.037637Z",
-     "start_time": "2019-05-03T23:22:19.833664Z"
+     "end_time": "2019-05-03T23:22:57.114817Z",
+     "start_time": "2019-05-03T23:22:57.097863Z"
     }
    },
    "outputs": [],
@@ -1114,7 +1114,7 @@
     "    w_re   = w.view((w.shape[0],-1))\n",
     "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    temp.append(d.cuda() * (w_norm/(d_norm.cuda()+1e-10)))\n",
-    "    d.data      = d.cuda() * (w_norm/(d_norm.cuda()+1e-10))"
+    "    d.data      = d.cuda() * (w_norm.cuda()/(d_norm.cuda()+1e-10))"
    ]
   },
   {
@@ -1122,7 +1122,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-03T23:22:23.835Z"
+     "start_time": "2019-05-03T23:22:46.713Z"
     }
    },
    "outputs": [],
