--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -611,7 +611,8 @@
       "==========================\n",
       "\tEpoch: 56\tTrain loss: 0.03\tTrain Acc: 99.061875\n",
       "\tEpoch: 56\tTest loss: 1.734\tTest Acc: 78.485555\n",
-      "==========================\n"
+      "==========================\n",
+      "Epoch: 57 i : 77 and loss: 0.02 acc: 0.99218755\r"
      ]
     }
    ],
