Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1012,338 +1012,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 147,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:24:11.736987Z",
-     "start_time": "2019-05-03T23:24:11.680704Z"
+     "end_time": "2019-05-03T23:25:07.693687Z",
+     "start_time": "2019-05-03T23:25:07.352172Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([3, 3, 3])\n",
-      "tensor(0.8998)\n",
-      "tensor(0.8998, device='cuda:0')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temp1 = []\n",
     "for d,w in zip(random_direction1,copy_of_the_weights):\n",
     "    for x,xx in zip(d,w):\n",
-    "        print(x.shape)\n",
-    "        print(x.norm())\n",
-    "        print(xx.norm())\n",
-    "        break\n",
+    "        temp1.append(xx.norm())\n",
     "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 148,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:24:29.680315Z",
-     "start_time": "2019-05-03T23:24:29.622435Z"
+     "end_time": "2019-05-03T23:25:30.488480Z",
+     "start_time": "2019-05-03T23:25:30.479517Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[[[0.8998]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8913]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.1111]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8061]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7606]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9653]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8925]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9094]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7875]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0709]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9405]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9362]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8752]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0335]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8636]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9374]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8855]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7705]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.1634]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.1168]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.5475]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8637]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9504]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.6490]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8400]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9207]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.6288]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8291]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9271]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7294]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9031]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0328]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0437]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7835]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8303]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0800]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9929]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0249]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7595]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9349]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0960]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0545]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8533]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9877]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9799]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0775]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9824]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7510]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8921]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.1448]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0587]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9871]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.1117]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0424]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7275]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8654]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9298]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7153]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.1112]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7682]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.5140]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9531]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0651]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9116]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9711]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.1374]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8753]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8202]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0632]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9773]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8294]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.6483]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8121]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7457]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7901]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9188]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.1892]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9720]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7403]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.7340]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9271]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.6994]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8604]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8564]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8707]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.2028]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9496]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0418]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.1292]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9651]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0084]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.8793]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0976]]],\n",
-      "\n",
-      "\n",
-      "        [[[0.9764]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0122]]],\n",
-      "\n",
-      "\n",
-      "        [[[1.0516]]]], device='cuda:0')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temp2 = []\n",
     "for d,w in zip(random_direction2,copy_of_the_weights):\n",
@@ -1352,9 +1046,64 @@
     "    \n",
     "    w_re   = w.view((w.shape[0],-1))\n",
     "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
-    "    temp2.append(w_norm)\n",
+    "    break\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-05-03T23:25:49.680Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(temp1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
