--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -612,7 +612,8 @@
       "\tEpoch: 56\tTrain loss: 0.03\tTrain Acc: 99.061875\n",
       "\tEpoch: 56\tTest loss: 1.734\tTest Acc: 78.485555\n",
       "==========================\n",
-      "Epoch: 57 i : 343 and loss: 0.065 acc: 0.9765625\r"
+      "\tEpoch: 57\tTrain loss: 0.037\tTrain Acc: 98.85225\n",
+      "Epoch: 57 i : 70 and loss: 1.68 acc: 0.78906255\r"
      ]
     }
    ],
