Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -613,7 +613,9 @@
       "\tEpoch: 56\tTest loss: 1.734\tTest Acc: 78.485555\n",
       "==========================\n",
       "\tEpoch: 57\tTrain loss: 0.037\tTrain Acc: 98.85225\n",
-      "Epoch: 57 i : 70 and loss: 1.68 acc: 0.78906255\r"
+      "\tEpoch: 57\tTest loss: 1.706\tTest Acc: 78.895255\n",
+      "==========================\n",
+      "Epoch: 58 i : 68 and loss: 0.025 acc: 0.9921875\r"
      ]
     }
    ],
