--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -1030,11 +1030,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 153,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:25:30.488480Z",
-     "start_time": "2019-05-03T23:25:30.479517Z"
+     "end_time": "2019-05-03T23:26:53.480215Z",
+     "start_time": "2019-05-03T23:26:53.473887Z"
     }
    },
    "outputs": [],
@@ -1045,31 +1045,23 @@
     "    d_norm = d_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
     "    \n",
     "    w_re   = w.view((w.shape[0],-1))\n",
-    "    w_norm = w_re.norm(dim=(1),keepdim=True)[:,:,None,None]\n",
+    "    w_norm = w_re.norm(dim=(1),keepdim=True)\n",
     "    break\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-03T23:25:54.051930Z",
-     "start_time": "2019-05-03T23:25:53.789633Z"
+     "start_time": "2019-05-03T23:26:39.250Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[tensor(0.8998, device='cuda:0'), tensor(0.8913, device='cuda:0'), tensor(1.1111, device='cuda:0'), tensor(0.8061, device='cuda:0'), tensor(0.7606, device='cuda:0'), tensor(0.9653, device='cuda:0'), tensor(0.8925, device='cuda:0'), tensor(0.9094, device='cuda:0'), tensor(0.7875, device='cuda:0'), tensor(1.0709, device='cuda:0'), tensor(0.9405, device='cuda:0'), tensor(0.9362, device='cuda:0'), tensor(0.8752, device='cuda:0'), tensor(1.0335, device='cuda:0'), tensor(0.8636, device='cuda:0'), tensor(0.9374, device='cuda:0'), tensor(0.8855, device='cuda:0'), tensor(0.7705, device='cuda:0'), tensor(1.1634, device='cuda:0'), tensor(1.1168, device='cuda:0'), tensor(0.5475, device='cuda:0'), tensor(0.8637, device='cuda:0'), tensor(0.9504, device='cuda:0'), tensor(0.6490, device='cuda:0'), tensor(0.8400, device='cuda:0'), tensor(0.9207, device='cuda:0'), tensor(0.6288, device='cuda:0'), tensor(0.8291, device='cuda:0'), tensor(0.9271, device='cuda:0'), tensor(0.7294, device='cuda:0'), tensor(0.9031, device='cuda:0'), tensor(1.0328, device='cuda:0'), tensor(1.0437, device='cuda:0'), tensor(0.7835, device='cuda:0'), tensor(0.8303, device='cuda:0'), tensor(1.0800, device='cuda:0'), tensor(0.9929, device='cuda:0'), tensor(1.0249, device='cuda:0'), tensor(0.7595, device='cuda:0'), tensor(0.9349, device='cuda:0'), tensor(1.0960, device='cuda:0'), tensor(1.0545, device='cuda:0'), tensor(0.8533, device='cuda:0'), tensor(0.9877, device='cuda:0'), tensor(0.9799, device='cuda:0'), tensor(1.0775, device='cuda:0'), tensor(0.9824, device='cuda:0'), tensor(0.7510, device='cuda:0'), tensor(0.8921, device='cuda:0'), tensor(1.1448, device='cuda:0'), tensor(1.0587, device='cuda:0'), tensor(0.9871, device='cuda:0'), tensor(1.1117, device='cuda:0'), tensor(1.0424, device='cuda:0'), tensor(0.7275, device='cuda:0'), tensor(0.8654, device='cuda:0'), tensor(0.9298, device='cuda:0'), tensor(0.7153, device='cuda:0'), tensor(1.1112, device='cuda:0'), tensor(0.7682, device='cuda:0'), tensor(0.5140, device='cuda:0'), tensor(0.9531, device='cuda:0'), tensor(1.0651, device='cuda:0'), tensor(0.9116, device='cuda:0'), tensor(0.9711, device='cuda:0'), tensor(1.1374, device='cuda:0'), tensor(0.8753, device='cuda:0'), tensor(0.8202, device='cuda:0'), tensor(1.0632, device='cuda:0'), tensor(0.9773, device='cuda:0'), tensor(0.8294, device='cuda:0'), tensor(0.6483, device='cuda:0'), tensor(0.8121, device='cuda:0'), tensor(0.7457, device='cuda:0'), tensor(0.7901, device='cuda:0'), tensor(0.9188, device='cuda:0'), tensor(1.1892, device='cuda:0'), tensor(0.9720, device='cuda:0'), tensor(0.7403, device='cuda:0'), tensor(0.7340, device='cuda:0'), tensor(0.9271, device='cuda:0'), tensor(0.6994, device='cuda:0'), tensor(0.8604, device='cuda:0'), tensor(0.8564, device='cuda:0'), tensor(0.8707, device='cuda:0'), tensor(1.2028, device='cuda:0'), tensor(0.9496, device='cuda:0'), tensor(1.0418, device='cuda:0'), tensor(1.1292, device='cuda:0'), tensor(0.9651, device='cuda:0'), tensor(1.0084, device='cuda:0'), tensor(0.8793, device='cuda:0'), tensor(1.0976, device='cuda:0'), tensor(0.9764, device='cuda:0'), tensor(1.0122, device='cuda:0'), tensor(1.0516, device='cuda:0')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(temp1)"
+    "for x,xx in zip(temp1,list(w_norm)):\n",
+    "    print(x,xx)"
    ]
   },
   {
